<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ConstraintPractice">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="match_parent"
        android:layout_height="185dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/it_academy_courses"
        android:textColor="#ABFFFFFF"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/trainers"
        android:textColor="#FCFFFFFF"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/timur_amanov"
        android:textColor="#FCFFFFFF"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/urmat_sagynbaev"
        android:textColor="#FCFFFFFF"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/edzen_oichiev"
        android:textColor="#FCFFFFFF"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/abdylkadyr_musa_uulu"
        android:textColor="#FCFFFFFF"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:srcCompat="@drawable/android" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView14"
        app:layout_constraintStart_toStartOf="@+id/imageView14"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        app:srcCompat="@drawable/javascript" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView14"
        app:layout_constraintStart_toStartOf="@+id/imageView14"
        app:layout_constraintTop_toBottomOf="@+id/textView19"
        app:srcCompat="@drawable/python" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/android"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/imageView14" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/front_end"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/imageView15" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/back_end"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/imageView16" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="184dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:text="@string/android_text"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/imageView14"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toEndOf="@+id/imageView14"
        app:layout_constraintTop_toTopOf="@+id/imageView14"
        app:layout_constraintVertical_bias="0.50" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="начать курс"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView18"
        app:layout_constraintEnd_toEndOf="@+id/textView21"
        app:layout_constraintStart_toStartOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="184dp"
        android:layout_height="40dp"
        android:text="@string/front_end_text"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
        app:layout_constraintEnd_toEndOf="@+id/textView21"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toTopOf="@+id/imageView15" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_course"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView19"
        app:layout_constraintEnd_toEndOf="@+id/button5"
        app:layout_constraintStart_toStartOf="@+id/button5" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:text="@string/python"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/imageView16"
        app:layout_constraintEnd_toEndOf="@+id/textView21"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toTopOf="@+id/imageView16" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="начать курс"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView20"
        app:layout_constraintEnd_toEndOf="@+id/button6"
        app:layout_constraintStart_toStartOf="@+id/button6" />
</androidx.constraintlayout.widget.ConstraintLayout>